--- a/src/app/common/components/panelHead/panelHead.html
+++ b/src/app/common/components/panelHead/panelHead.html
@@ -7,7 +7,7 @@
         <div class="col-md-7" style="padding-top:5px">
             <div class="pull-right" ng-show="ngCondition">
                 
-                <button type="submit" class="btn btn-sm btn-primary" ng-click="saveForm()">Save</button>
+                <button type="submit" class="btn btn-sm btn-primary" >Save</button>
                 <button type="button" class="btn btn-sm btn-warning" ng-click="resetForm()">Reset</button>
                 <button type="button" class="btn btn-sm btn-danger" ng-click="clearForm()">Clear</button>
                  <button type="button" class="btn btn-sm btn-primary" ng-click="employeeList()">List</button>
