--- a/src/app/pages/organization/employees/templates/personal/personal-view.html
+++ b/src/app/pages/organization/employees/templates/personal/personal-view.html
@@ -1,4 +1,4 @@
-<form ng-submit="empTabCtrl.saveFormCommon()">
+<form ng-submit="empTabCtrl.saveFormCommon()" name="editForm">
 <div class="panel panel-default xmedium-panel">
   <edit-panel-head page-title="page.pageinfo.title" reset-form="empTabCtrl.resetFormCommon()"
     clear-form="empTabCtrl.clearFormCommon()" condition="(empTabCtrl.activeTab==0 || empTabCtrl.activeTab==1)"></edit-panel-head>
@@ -10,106 +10,137 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="form-group">
-                <label for="inputDOB">Date Of Birth*</label>
+
+                <label  ng-bind="page.pageinfo.fields.PdDateOfBirth.text"></label>
+                <field-box ng-model="page.pageinfo.fields.PdDateOfBirth" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+                <!--<label for="inputDOB">Date Of Birth*</label>
 
                 <datepicker date-format="dd-MMMM-yyyy" selector="form-control">
                   <input ng-model="empTabCtrl.entity.PdDateOfBirth" type="text" class="form-control" required />
-                </datepicker>
+                </datepicker>-->
               </div>
             </div>
             <div class="col-sm-4">
               <div class="form-group">
-                <label for="inputDesignation">Marital Status*</label>
+                 <label  ng-bind="page.pageinfo.fields.PdMaritalId.text"></label>
+                <field-box ng-model="page.pageinfo.fields.PdMaritalId" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+
+                <!--<label for="inputDesignation">Marital Status*</label>
                 <select id="empMaritalStatus_{{$index}}" name="empMaritalStatus_{{$index}}" ng-model="empTabCtrl.entity.PdMaritalId" class="form-control"
                   ng-options="maritalStatus.value as maritalStatus.name for maritalStatus in page.pageinfo.selects.PdMaritalId"
                   data-placeholder="Select Nav Menu" required>
                   <option></option>
-               </select>
+               </select>-->
               </div>
             </div>
             <div class="col-sm-4">
               <div class="form-group">
-                <label for="inputEmployeeType">Gender*</label>
+                 <label  ng-bind="page.pageinfo.fields.PdGenderId.text"></label>
+                <field-box ng-model="page.pageinfo.fields.PdGenderId" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+
+                <!--<label for="inputEmployeeType">Gender*</label>
                 <select id="empGender_{{$index}}" name="empGender_{{$index}}" ng-model="empTabCtrl.entity.PdGenderId" class="form-control"
                   ng-options="gender.value as gender.name for gender in page.pageinfo.selects.PdGenderId" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
                   data-placeholder="Select Nav Menu" required>
                   <option></option>
-               </select>
+               </select>-->
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-4">
               <div class="form-group">
+                 <label  ng-bind="page.pageinfo.fields.PdMobileNo.text"></label>
+                <field-box ng-model="page.pageinfo.fields.PdMobileNo" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+<!--
                 <label for="inputMobile">Mobile*</label>
-                <input type="text" class="form-control"  minlength="10" maxlength="17" numeric-Only id="inputMobile" ng-model="empTabCtrl.entity.PdMobileNo" required>
+                <input type="text" class="form-control"  minlength="10" maxlength="17" numeric-Only id="inputMobile" ng-model="empTabCtrl.entity.PdMobileNo" required>-->
               </div>
             </div>
             <div class="col-sm-4">
               <div class="form-group">
-                <label for="inputEmail">Email*</label>
-                <input type="email" class="form-control" id="inputEmail" maxlength="50" ng-model="empTabCtrl.entity.PdEmail" required>
+                
+                <label  ng-bind="page.pageinfo.fields.PdEmail.text"></label>
+                <field-box ng-model="page.pageinfo.fields.PdEmail" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+                <!--<input type="email" class="form-control" id="inputEmail" maxlength="50" ng-model="empTabCtrl.entity.PdEmail" required>-->
               </div>
             </div>
             <div class="col-sm-4">
               <div class="form-group">
-                <label for="inputAnniversaryDate">Anniversary Date</label>
+
+                 <label  ng-bind="page.pageinfo.fields.PDAnniversaryDate.text"></label>
+                <field-box ng-model="page.pageinfo.fields.PDAnniversaryDate" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+                <!--<label for="inputAnniversaryDate">Anniversary Date</label>
 
                 <datepicker date-format="dd-MMMM-yyyy" selector="form-control">
                   <input ng-model="empTabCtrl.entity.PDAnniversaryDate" type="text" class="form-control" />
-                </datepicker>
+                </datepicker>-->
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-4">
               <div class="form-group">
-                <label for="inputFacebook">Facebook</label>
-                <input type="text" class="form-control" id="inputFacebook" ng-model="empTabCtrl.entity.PDFacebook">
+                 <label  ng-bind="page.pageinfo.fields.PDFacebook.text"></label>
+                <field-box ng-model="page.pageinfo.fields.PDFacebook" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+                <!--<label for="inputFacebook">Facebook</label>
+                <input type="text" class="form-control" id="inputFacebook" ng-model="empTabCtrl.entity.PDFacebook">-->
               </div>
             </div>
             <div class="col-sm-4">
               <div class="form-group">
-                <label for="inputTwitter">Twitter</label>
-                <input type="text" class="form-control" id="inputTwitter" ng-model="empTabCtrl.entity.PDTwitter">
+                  <label  ng-bind="page.pageinfo.fields.PDTwitter.text"></label>
+                <field-box ng-model="page.pageinfo.fields.PDTwitter" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+                <!--<label for="inputTwitter">Twitter</label>
+                <input type="text" class="form-control" id="inputTwitter" ng-model="empTabCtrl.entity.PDTwitter">-->
               </div>
             </div>
             <div class="col-sm-4">
               <div class="form-group">
-                <label for="inputAnniversaryDate">Linked In</label>
-                <input type="text" class="form-control" id="inputAnniversaryDate" ng-model="empTabCtrl.entity.PDLinkedIn">
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="form-group">
-                <label for="inputFacebook">Adhaar</label>
-                <input type="text" class="form-control" id="inputFacebook" ng-model="empTabCtrl.entity.PDAdhar">
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="form-group">
-                <label for="inputTwitter">PAN</label>
-                <input type="text" class="form-control" id="inputTwitter" ng-model="empTabCtrl.entity.PDPanCard">
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="form-group">
-                <label for="inputOtherNo">Other Identity</label>
-                <input type="text" class="form-control" id="inputOtherNo" ng-model="empTabCtrl.entity.PDOtherNumber">
+                <label  ng-bind="page.pageinfo.fields.PDLinkedIn.text"></label>
+                <field-box ng-model="page.pageinfo.fields.PDLinkedIn" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+                <!--<label for="inputAnniversaryDate">Linked In</label>
+                <input type="text" class="form-control" id="inputAnniversaryDate" ng-model="empTabCtrl.entity.PDLinkedIn">-->
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-4">
               <div class="form-group">
-                <label for="inputFacebook">Nationality*</label>
+                 <label  ng-bind="page.pageinfo.fields.PDAdhar.text"></label>
+                <field-box ng-model="page.pageinfo.fields.PDAdhar" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+                <!--<label for="inputFacebook">Adhaar</label>
+                <input type="text" class="form-control" id="inputFacebook" ng-model="empTabCtrl.entity.PDAdhar">-->
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-group">
+                   <label  ng-bind="page.pageinfo.fields.PDPanCard.text"></label>
+                <field-box ng-model="page.pageinfo.fields.PDPanCard" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+                <!--<label for="inputTwitter">PAN</label>
+                <input type="text" class="form-control" id="inputTwitter" ng-model="empTabCtrl.entity.PDPanCard">-->
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-group">
+                  <label  ng-bind="page.pageinfo.fields.PDOtherNumber.text"></label>
+                <field-box ng-model="page.pageinfo.fields.PDOtherNumber" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+                <!--<label for="inputOtherNo">Other Identity</label>
+                <input type="text" class="form-control" id="inputOtherNo" ng-model="empTabCtrl.entity.PDOtherNumber">-->
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="form-group">
+                  <label  ng-bind="page.pageinfo.fields.PdNationalityId.text"></label>
+                <field-box ng-model="page.pageinfo.fields.PdNationalityId" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+                <!--<label for="inputFacebook">Nationality*</label>
                 <select id="empNationality_{{$index}}" name="empNationality_{{$index}}" ng-model="empTabCtrl.entity.PdNationalityId" class="form-control"
                   ng-options="nationality.value as nationality.name for nationality in page.pageinfo.selects.PdNationalityId"
                   required>
                   <option></option>
-               </select>
+               </select>-->
               </div>
             </div>
           </div>
@@ -118,20 +149,29 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="form-group">
-                <label for="inputEmgName">Name</label>
-                <input type="text" class="form-control" id="inputEmgName" text-Only-With-Space ng-model="empTabCtrl.empEmgContact.ECPersonName">
+                 <label  ng-bind="page.pageinfo.fields.ECPersonName.text"></label>
+                <field-box ng-model="page.pageinfo.fields.ECPersonName" ng-entity="empTabCtrl.empEmgContact" form="editForm"></field-box>
+   
+                <!--<label for="inputEmgName">Name</label>
+                <input type="text" class="form-control" id="inputEmgName" text-Only-With-Space ng-model="empTabCtrl.empEmgContact.ECPersonName">-->
               </div>
             </div>
             <div class="col-sm-4">
               <div class="form-group">
-                <label for="inputEmgMobile">Mobile</label>
-                <input type="text" class="form-control" id="inputEmgMobile" numeric-Only minlength="10" maxlength="17" ng-model="empTabCtrl.empEmgContact.ECContactNo" required>
+                 <label  ng-bind="page.pageinfo.fields.ECContactNo.text"></label>
+                <field-box ng-model="page.pageinfo.fields.ECContactNo" ng-entity="empTabCtrl.empEmgContact" form="editForm"></field-box>
+   
+                <!--<label for="inputEmgMobile">Mobile</label>
+                <input type="text" class="form-control" id="inputEmgMobile" numeric-Only minlength="10" maxlength="17" ng-model="empTabCtrl.empEmgContact.ECContactNo" required>-->
               </div>
             </div>
             <div class="col-sm-4">
               <div class="form-group">
-                <label for="inputEmgAddress">Address</label>
-                <input type="text" class="form-control" id="inputEmgAddress" maxlength="50" ng-model="empTabCtrl.empEmgContact.ECAddress">
+                  <label  ng-bind="page.pageinfo.fields.ECAddress.text"></label>
+                <field-box ng-model="page.pageinfo.fields.ECAddress" ng-entity="empTabCtrl.empEmgContact" form="editForm"></field-box>
+
+                <!--<label for="inputEmgAddress">Address</label>
+                <input type="text" class="form-control" id="inputEmgAddress" maxlength="50" ng-model="empTabCtrl.empEmgContact.ECAddress">-->
               </div>
             </div>
           </div>
