--- a/src/app/pages/organization/employees/templates/account/account-view.html
+++ b/src/app/pages/organization/employees/templates/account/account-view.html
@@ -1,143 +1,188 @@
 <form ng-submit="empTabCtrl.saveFormCommon()">
-<div class="panel panel-default bootstrap-panel xmedium-panel pnlScroll">
-  <edit-panel-head page-title="page.pageinfo.title" 
-   
-    reset-form="empTabCtrl.resetFormCommon()"
-    clear-form="empTabCtrl.clearFormCommon()" 
-    condition="true"></edit-panel-head>
+  <div class="panel panel-default bootstrap-panel xmedium-panel pnlScroll">
+    <edit-panel-head page-title="page.pageinfo.title" reset-form="empTabCtrl.resetFormCommon()" clear-form="empTabCtrl.clearFormCommon()"
+      condition="true"></edit-panel-head>
 
-  <div class="panel-body" style="padding:5px" ng-scrollbars ng-scrollbars-config="config">
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="form-group">
-          <label for="inputDepartment">Salary Mode*</label>
+    <div class="panel-body" style="padding:5px" ng-scrollbars ng-scrollbars-config="config">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="form-group">
+            <label ng-bind="page.pageinfo.fields.ADSalaryModeId.text"></label>
+            <field-box ng-model="page.pageinfo.fields.ADSalaryModeId" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+
+            <!--<label for="inputDepartment">Salary Mode*</label>
           <select id="empSalaryMode_{{$index}}" name="empSalaryMode_{{$index}}" ng-model="empTabCtrl.entity.ADSalaryModeId" class="form-control"
             ng-options="salaryMode.value as salaryMode.name for salaryMode in page.pageinfo.selects.ADSalaryModeId" data-placeholder="Select Nav Menu"
             requried>
            </select>
-          <option></option>
+          <option></option>-->
+          </div>
         </div>
       </div>
-    </div>
 
-    <div ng-show="(empTabCtrl.entity.ADSalaryModeId=='3')">
-      <h3 class="">Bank Detail</h3>
-      <hr>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputDepartment">Salary*</label>
+      <div ng-show="(empTabCtrl.entity.ADSalaryModeId=='3')">
+        <h3 class="">Bank Detail</h3>
+        <hr>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="form-group">
+
+              <label ng-bind="page.pageinfo.fields.ADSalaryID.text"></label>
+              <field-box ng-model="page.pageinfo.fields.ADSalaryID" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+
+              <!--<label for="inputDepartment">Salary*</label>
             <select id="empSalary_{{$index}}" name="empSalary_{{$index}}" ng-model="empTabCtrl.entity.ADSalaryID" class="form-control"
               ng-options="salary.value as salary.name for salary in page.pageinfo.selects.ADSalaryID" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
               data-placeholder="Select Nav Menu" ng-required="empTabCtrl.entity.ADSalaryModeId=='3'">
               <option></option>
-               </select>
+               </select>-->
+            </div>
           </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputDepartment">Bank Name*</label>
+          <div class="col-sm-4">
+            <div class="form-group">
+
+              <label ng-bind="page.pageinfo.fields.BankId.text"></label>
+              <field-box ng-model="page.pageinfo.fields.BankId" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+              <!--<label for="inputDepartment">Bank Name*</label>
             <select id="empBankName_{{$index}}" name="empBankName_{{$index}}" ng-model="empTabCtrl.entity.BankId" class="form-control"
               ng-options="bankName.value as bankName.name for bankName in page.pageinfo.selects.BankId" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
               data-placeholder="Select Nav Menu" ng-required="empTabCtrl.entity.ADSalaryModeId=='3'">
                <option></option>
-               </select>
+               </select>-->
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label ng-bind="page.pageinfo.fields.BankAccountNo.text"></label>
+              <field-box ng-model="page.pageinfo.fields.BankAccountNo" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+              <!--<label for="inputDepartment">Account No.*</label>
+            <input type="text" class="form-control" ng-model="empTabCtrl.entity.BankAccountNo" ng-required="empTabCtrl.entity.ADSalaryModeId=='3'" numeric-Only>-->
+            </div>
           </div>
         </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputDepartment">Account No.*</label>
-            <input type="text" class="form-control" ng-model="empTabCtrl.entity.BankAccountNo" ng-required="empTabCtrl.entity.ADSalaryModeId=='3'" numeric-Only>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label ng-bind="page.pageinfo.fields.ADBranchName.text"></label>
+              <field-box ng-model="page.pageinfo.fields.ADBranchName" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+
+              <!--<label for="inputDepartment">Branch Name*</label>
+            <input type="text" class="form-control" ng-model="empTabCtrl.entity.ADBranchName" ng-required="empTabCtrl.entity.ADSalaryModeId=='3'" text-Only maxlength="50">-->
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label ng-bind="page.pageinfo.fields.ADIFSCCode.text"></label>
+              <field-box ng-model="page.pageinfo.fields.ADIFSCCode" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+
+              <!--<label for="inputDepartment">IFSC*</label>
+            <input type="text" class="form-control" ng-model="empTabCtrl.entity.ADIFSCCode" ng-required="empTabCtrl.entity.ADSalaryModeId=='3'">-->
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label ng-bind="page.pageinfo.fields.ADChequeNo.text"></label>
+              <field-box ng-model="page.pageinfo.fields.ADChequeNo" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+              <!--<label for="inputDepartment">Cheque</label>
+            <input type="text" class="form-control" ng-model="empTabCtrl.entity.ADChequeNo" >-->
+            </div>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputDepartment">Branch Name*</label>
-            <input type="text" class="form-control" ng-model="empTabCtrl.entity.ADBranchName" ng-required="empTabCtrl.entity.ADSalaryModeId=='3'" text-Only maxlength="50">
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputDepartment">IFSC*</label>
-            <input type="text" class="form-control" ng-model="empTabCtrl.entity.ADIFSCCode" ng-required="empTabCtrl.entity.ADSalaryModeId=='3'">
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="inputDepartment">Cheque</label>
-            <input type="text" class="form-control" ng-model="empTabCtrl.entity.ADChequeNo" >
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="checkbox">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label ng-bind="page.pageinfo.fields.PFPPFIsActive.text"></label>
+              <field-box ng-model="page.pageinfo.fields.PFPPFIsActive" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+            </div>
+            <!--<div class="checkbox">
             <label class="custom-checkbox">      
       <input type="checkbox" ng-model="empTabCtrl.entity.PFPPFIsActive">   
       <span>PF Active</span>
     </label>
+          </div>-->
           </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="checkbox">
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label ng-bind="page.pageinfo.fields.ESIIsActive.text"></label>
+              <field-box ng-model="page.pageinfo.fields.ESIIsActive" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+            </div>
+            <!--<div class="checkbox">
             <label class="custom-checkbox">      
       <input type="checkbox"  ng-model="empTabCtrl.entity.ESIIsActive" >   
       <span>ESI Active</span>
     </label>
+          </div>-->
           </div>
+        </div>
+
+        <div ng-if="empTabCtrl.entity.PFPPFIsActive">
+          <h3 class="">PF Account</h3>
+          <hr>
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="form-group">
+
+                    <label ng-bind="page.pageinfo.fields.PFPPFAccountNo.text"></label>
+              <field-box ng-model="page.pageinfo.fields.PFPPFAccountNo" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+<!--
+                <label for="inputDepartment">PF Account No.*</label>
+                <input type="text" class="form-control" ng-model="empTabCtrl.entity.PFPPFAccountNo" ng-required="empTabCtrl.entity.PFPPFIsActive"
+                  numeric-Only>-->
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-group">
+
+                
+                <label ng-bind="page.pageinfo.fields.PFPPFMemberDate.text"></label>
+              <field-box ng-model="page.pageinfo.fields.PFPPFMemberDate" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+
+                <!--<label for="inputDepartment">PF Start Date*</label>
+                <input type="text" class="form-control"  ng-model="empTabCtrl.entity.PFPPFMemberDate">
+                <datepicker date-format="dd-MMMM-yyyy" selector="form-control">
+                  <input ng-model="empTabCtrl.entity.PFPPFMemberDate" type="text" class="form-control" placeholder="dd-mm-yyyy" / ng-required="empTabCtrl.entity.PFPPFIsActive">
+                </datepicker>-->
+              </div>
+            </div>
+          </div>
+          <hr>
+        </div>
+
+        <div ng-if="empTabCtrl.entity.ESIIsActive">
+          <h3 class="">ESI Account</h3>
+          <hr>
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="form-group">
+                    <label ng-bind="page.pageinfo.fields.ESIMemeberNo.text"></label>
+              <field-box ng-model="page.pageinfo.fields.ESIMemeberNo" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+
+      
+                <!--<label for="inputDepartment">ESI Account No.*</label>
+                <input type="text" class="form-control" ng-model="empTabCtrl.entity.ESIMemeberNo" ng-required="empTabCtrl.entity.ESIIsActive"
+                  numeric-Only>-->
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="form-group">
+
+                   <label ng-bind="page.pageinfo.fields.ESIMemeberDate.text"></label>
+              <field-box ng-model="page.pageinfo.fields.ESIMemeberDate" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+
+                <!--<label for="inputDepartment">ESI Start Date*</label>
+                <input type="text" class="form-control"  ng-model="empTabCtrl.entity.ESIMemeberDate">
+                <datepicker date-format="dd-MMMM-yyyy" selector="form-control">
+                  <input ng-model="empTabCtrl.entity.ESIMemeberDate" type="text" class="form-control" placeholder="dd-mm-yyyy" ng-required="empTabCtrl.entity.ESIIsActive"
+                  />
+                </datepicker>-->
+              </div>
+            </div>
+          </div>
+          <hr>
         </div>
       </div>
-
-      <div ng-if="empTabCtrl.entity.PFPPFIsActive">
-        <h3 class="">PF Account</h3>
-        <hr>
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="form-group">
-              <label for="inputDepartment">PF Account No.*</label>
-              <input type="text" class="form-control" ng-model="empTabCtrl.entity.PFPPFAccountNo" ng-required="empTabCtrl.entity.PFPPFIsActive" numeric-Only>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="form-group">
-              <label for="inputDepartment">PF Start Date*</label>
-              <!--<input type="text" class="form-control"  ng-model="empTabCtrl.entity.PFPPFMemberDate">-->
-              <datepicker date-format="dd-MMMM-yyyy" selector="form-control">
-                <input ng-model="empTabCtrl.entity.PFPPFMemberDate" type="text" class="form-control" placeholder="dd-mm-yyyy"/ ng-required="empTabCtrl.entity.PFPPFIsActive">
-              </datepicker>
-            </div>
-          </div>
-        </div>
-        <hr>
-      </div>
-
-      <div ng-if="empTabCtrl.entity.ESIIsActive">
-        <h3 class="">ESI Account</h3>
-        <hr>
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="form-group">
-              <label for="inputDepartment">ESI Account No.*</label>
-              <input type="text" class="form-control" ng-model="empTabCtrl.entity.ESIMemeberNo" ng-required="empTabCtrl.entity.ESIIsActive" numeric-Only>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="form-group">
-              <label for="inputDepartment">ESI Start Date*</label>
-              <!--<input type="text" class="form-control"  ng-model="empTabCtrl.entity.ESIMemeberDate">-->
-              <datepicker date-format="dd-MMMM-yyyy" selector="form-control">
-                <input ng-model="empTabCtrl.entity.ESIMemeberDate" type="text" class="form-control" placeholder="dd-mm-yyyy" ng-required="empTabCtrl.entity.ESIIsActive"/>
-              </datepicker>
-            </div>
-          </div>
-        </div>
-        <hr>
+      <div class="text-center">
+        <!--<button type="button" class="btn btn-primary" ng-click="empTabCtrl.saveForm()">Save</button>-->
       </div>
     </div>
-    <div class="text-center">
-      <!--<button type="button" class="btn btn-primary" ng-click="empTabCtrl.saveForm()">Save</button>-->
-    </div>
-  </div>
-  </form>
+</form>
